--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,6 +53,7 @@ jobs:
             
         
      - name: Deploy in EC2
+     - uses: actions/checkout@v2
        env:
             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
             HOSTNAME : ${{ secrets.HOSTNAME  }}
