--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,8 +52,8 @@ jobs:
             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
             
         
-     - name: Deploy in EC2
      - uses: actions/checkout@v2
+       name: Deploy in EC2
        env:
             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
             HOSTNAME : ${{ secrets.HOSTNAME  }}
