--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,13 +53,14 @@ jobs:
             
             
      - name: Docker pull and run from Amazon ECR
+       run: |
+              docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+              docker run -d -p 8081:80 --name my_website $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG     
        env:
             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
             HOSTNAME : ${{ secrets.HOSTNAME  }}
             USER_NAME : ${{ secrets.USER_NAME  }}
-            scripts: |
-              docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-              docker run -d -p 8081:80 --name my_website $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            
             
      
             
