--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,11 +7,7 @@ on:
   pull_request:
     branches:
       - 'main'
-    
-env:
-  AWS_REGION: us-east-1
-                                               
-  CONTAINER_NAME: my_website           
+          
                                                    
 jobs:
    build:
@@ -29,37 +25,34 @@ jobs:
         echo ::set-output name=ARTEFACT_VERSION::$ARTEFACT_VERSION 
        
          
-     - name: Configure AWS credentials
-       uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
+     - name: Build Docker image
+       run: docker build . --tag mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
+    
+     - name: Login to DockerHub
+       uses: docker/login-action@v1 
        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-     - name: Login to Amazon ECR
-       id: login-ecr
-       uses: aws-actions/amazon-ecr-login@v1
-
-     - name: Build, tag, and push image to Amazon ECR
-       id: build-image
-       env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: test_repo
-          IMAGE_TAG: ${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
-       run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-            
-            
-     - name: Docker pull and run from Amazon ECR
-       run: |
-              docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-              docker run -d -p 8081:80 --name my_website $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG     
-       env:
-            PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
-            HOSTNAME : ${{ secrets.HOSTNAME  }}
-            USER_NAME : ${{ secrets.USER_NAME  }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+    
+     - name: Push to the DockerHub
+       run: docker push mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
+      
+     - name: Docker pull and run from Docker Hub
+       uses: appleboy/ssh-action@master
+       with:
+          env: |
+             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+             HOSTNAME : ${{ secrets.HOSTNAME  }}
+             USER_NAME : ${{ secrets.USER_NAME  }}
+          scripts: |
+           docker login
+           docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
+           docker stop website
+           docker rm backend website
+           docker run -d -p 8081:80 --name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }} 
+           
+                           
+         
             
             
      
