--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -44,6 +44,7 @@ jobs:
              PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
              HOSTNAME : ${{ secrets.HOSTNAME  }}
              USER_NAME : ${{ secrets.USER_NAME  }}
+             PORT: ${{ secrets.PORT }}
           scripts: |
            docker login
            docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
