--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,23 +37,23 @@ jobs:
      - name: Push to the DockerHub
        run: docker push mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
        
-     - name: executing remote ssh commands using ssh key
-       uses: ./
-       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
-        script: whoami  
-      
+           
      - name: Docker pull and run from Docker Hub
        uses: appleboy/ssh-action@master
        with:
           env: |
-             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+             port: 22
+             sync: false
+             use_insecure_cipher: false
+             timeout: 30s
+             command_timeout: 10m
+             proxy_port: 22
+             proxy_timeout: 30s
+             proxy_use_insecure_cipher: false
+             script_stop: false
+             debug: false
              HOSTNAME : ${{ secrets.HOSTNAME  }}
              USER_NAME : ${{ secrets.USER_NAME  }}
-             PORT: ${{ secrets.PORT }}
           scripts: |
            docker login
            docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
