--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,34 +41,15 @@ jobs:
      - name: Docker pull and run from Docker Hub
        uses: appleboy/ssh-action@master
        with:
-         port: 22
-         sync: false
-         use_insecure_cipher: false
-         timeout: 30s
-         command_timeout: 10m
-         proxy_port: 22
-         proxy_timeout: 30s
-         proxy_use_insecure_cipher: false
-         script_stop: false
-         debug: false
-         env: |
-             port: 22
-             sync: false
-             use_insecure_cipher: false
-             timeout: 30s
-             command_timeout: 10m
-             proxy_port: 22
-             proxy_timeout: 30s
-             proxy_use_insecure_cipher: false
-             script_stop: false
-             debug: false
              HOSTNAME : ${{ secrets.HOSTNAME  }}
              USER_NAME : ${{ secrets.USER_NAME  }}
-         scripts: |
-           docker login
-           docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
-           docker stop website
-           docker run -d -p 8081:80 --name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }} 
+             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
+             PORT: ${{ secrets.PORT  }}
+             scripts: |
+               docker login
+               docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
+               docker stop website
+               docker run -d -p 8081:80 --name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }} 
            
                            
          
