--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,10 +41,10 @@ jobs:
      - name: Docker pull and run from Docker Hub
        uses: appleboy/ssh-action@master
        with:
-             HOSTNAME : ${{ secrets.HOSTNAME  }}
-             USER_NAME : ${{ secrets.USER_NAME  }}
-             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
-             PORT: ${{ secrets.PORT  }}
+             hostname : ${{ secrets.HOSTNAME  }}
+             user_name : ${{ secrets.USER_NAME  }}
+             private_key: ${{ secrets.AWS_PRIVATE_KEY  }}
+             port: ${{ secrets.PORT  }}
              scripts: |
                docker login
                docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
