--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -44,6 +44,7 @@ jobs:
              host : ${{ secrets.HOSTNAME  }}
              username : ${{ secrets.USER_NAME  }}
              key: ${{ secrets.AWS_PRIVATE_KEY  }}
+             port: ${{ secrets.PORT }}
              debug: true
              scripts: |
                docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
