--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -39,7 +39,7 @@ jobs:
        
            
      - name: Docker pull and run from Docker Hub
-       uses: appleboy/ssh-action@master
+       uses: appleboy/ssh-action@v0.1.4
        with:
              host : ${{ secrets.HOSTNAME  }}
              username : ${{ secrets.USER_NAME  }}
