--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,7 +45,7 @@ jobs:
              username : ${{ secrets.USER_NAME  }}
              key: ${{ secrets.AWS_PRIVATE_KEY }}
              port: ${{ secrets.PORT }}
-             script: echo devuser 
+             script: docker run -d -p 80:80 —name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}  
                              
            
                            
