--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,7 +47,7 @@ jobs:
              port: ${{ secrets.PORT }}
              script: |
                docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
-               docker run -d -p 80:80 —name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}  
+               docker run -d -p 80:80 --name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}  
                              
            
                            
