--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,6 +47,8 @@ jobs:
              port: ${{ secrets.PORT }}
              script: |
                docker pull mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
+               docker stop website
+               docker rm website
                docker run -d -p 80:80 --name website mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}  
                              
            
