--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ jobs:
        uses: docker/login-action@v1 
        with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     
      - name: Push to the DockerHub
        run: docker push mastermole/my_website:${{ steps.version-generator.outputs.ARTEFACT_VERSION }}
